--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "axios": "^1.11.0",
     "expo": "^54.0.27",
     "expo-blur": "~15.0.8",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.11",
     "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-image-picker": "^17.0.10",
     "expo-linking": "~8.0.10",
     "expo-media-library": "~18.2.1",
     "expo-router": "~6.0.17",
@@ -44,7 +46,8 @@
     "react-native-svg": "^15.12.1",
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "^0.21.2",
-    "react-native-webview": "^13.15.0"
+    "react-native-webview": "^13.15.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
