Remove hardcoded AWS keys, use env variables

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Lcm",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/LCMLOGO.png",
     "scheme": "lcm",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,15 +13,28 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/LCMLOGO.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.leadscraft.Lcm",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "data": [
+            {
+              "scheme": "lcm",
+              "host": "authredirect"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/LCMLOGO.png"
     },
     "plugins": [
       "expo-router",
@@ -37,6 +50,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "e00bfff7-486a-4c24-91af-3526a83915d1"
+      }
+    },
+    "owner": "leadscraft"
   }
 }
