--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
     "expo": "^54.0.27",
+    "expo-auth-session": "~5.5.2",
     "expo-blur": "~15.0.8",
     "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.11",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -47,6 +49,7 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "^0.21.2",
     "react-native-webview": "^13.15.0",
+    "react-native-youtube-iframe": "^2.4.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
