--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "react-native": "^0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-razorpay": "^2.3.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.12.1",
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "^0.21.2",
