--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.11",
     "expo-dev-client": "~6.0.20",
+    "expo-device": "^8.0.10",
     "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -30,6 +31,7 @@
     "expo-image-picker": "^17.0.10",
     "expo-linking": "~8.0.10",
     "expo-media-library": "~18.2.1",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.17",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.12",
